k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1-prod
  namespace: app-1-prod
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: app-1-prod
  template:
    metadata:
      labels:
        app: app-1-prod
    spec:
      serviceAccountName: app-1-prod-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: app-1-prod
          image: <YOUR_ACCOUNT_ID>.dkr.ecr.us-east-1.amazonaws.com/prod/app-1:v1.0
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "250Mi"
            limits:
              cpu: "200m"
              memory: "350Mi"
