k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1-prod-service
  namespace: app-1-prod
spec:
  type: ClusterIP
  selector:
    app: app-1-prod
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
