k8s/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-1-prod-ingress
  namespace: app-1-prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app-1.com
        - www.app-1.com
      secretName: app-1-prod-tls
  rules:
    - host: app-1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-1-prod-service
                port:
                  number: 80
    - host: www.app-1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-1-prod-service
                port:
                  number: 80
